--- a/tasks-3/rest-3-ajax/package.json
+++ b/tasks-3/rest-3-ajax/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build-pug-cli": "pug -c --name-after-file -o public/javascripts/ views/users-client.pug"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
